# secops-triage-li-maxsim

./: .gitignore  README.md  eval_bundle.yaml  pyproject.toml
docs/: phase1.md  phase10.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  phase9.md
docs/adr/: ADR-0001-phase1-bridge-negative-proof.md
rust/: AGENTS.md  Cargo.toml
rust/crates/hamming_maxsim_kernel/: Cargo.toml
rust/crates/hamming_maxsim_kernel/benches/: kernel_bench.rs
rust/crates/hamming_maxsim_kernel/src/: avx2.rs  avx512.rs  dispatch.rs  lib.rs  neon.rs  scalar.rs  tiled.rs
rust/crates/hamming_maxsim_py/: Cargo.toml  pyproject.toml
rust/crates/hamming_maxsim_py/src/: lib.rs  register.rs
rust/crates/hamming_maxsim_py/tests/: register_smoke.py
rust/crates/hamming_maxsim_udf/: Cargo.toml
rust/crates/hamming_maxsim_udf/src/: arrays.rs  errors.rs  lib.rs  udf.rs
src/: AGENTS.md
src/alert_triage/: __init__.py
src/alert_triage/encoders/: __init__.py  base.py  binary_calibrator.py
src/alert_triage/evals/: __init__.py  mcp_reference_probe.py  tier1_phase1.py  tier1_phase2.py  tier1_phase3.py  tier2_phase4.py  tier3_phase4.py
src/alert_triage/retrievers/: __init__.py  _maxsim_hamming_ref.py  _maxsim_ref.py  base.py  binary_rerank.py  bm25.py  fp16_ref.py  hamming_udf.py  hamming_udf_runtime.py  hybrid_rerank.py  lance_mv.py
src/alert_triage/storage/: __init__.py  in_memory.py  lance_adapter.py
src/alert_triage/triage/: __init__.py  audit.py  disposition.py  mcp_terminal.py  provider_runtime.py  reasoning.py  retry.py
tests/: conftest.py
tests/contract/: test_retriever_contract.py
tests/fixtures/mcp/: fake_reference_server.py  fake_terminal_server.py
tests/fixtures/phase1_tier1/: analyst_labels.json  corpus_fp16.npz  corpus_texts.json  qrels.json  queries_fp16.npz  query_texts.json  reasoning_targets.json  replay_runtime.json
tests/integration/: test_binary_then_fp16_rerank.py  test_hamming_udf_retriever.py  test_mcp_reference_probe_live.py  test_tier2_phase4_mcp_live.py
tests/unit/: test_binary_calibrator.py  test_bm25_retriever.py  test_disposition_metrics.py  test_fp16_reference_retriever.py  test_hybrid_bm25_rerank.py  test_in_memory_store.py  test_lance_mv_retriever.py  test_maxsim_hamming_reference.py  test_maxsim_reference.py  test_mcp_reference_probe.py  test_mcp_terminal_runtime.py  test_provider_runtime.py  test_query_bundle_filters.py  test_retry.py  test_tier1_phase1.py  test_tier1_phase3.py  test_tier2_phase4.py  test_tier3_phase4.py  test_triage_reasoning.py
