[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-triage-li"
version = "0.1.0"
description = "Phase-4 triage evaluation slice for dual-lane late-interaction alert triage retrieval."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datafusion==48.0.0",
  "numpy>=1.26,<3",
  "pyarrow>=23,<24",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "external_mcp_live: opt-in live MCP probe against the official Everything reference server",
]
